# flutter_embedder

./: Cargo.toml  README.md  build.rs
src/: flutter_application.rs  keyboard_logical_key_map.rs  keyboard_physical_key_map.rs  main.rs
src/flutter_application/: compositor.rs  keyboard.rs
